--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ find_package(absl REQUIRED)
 find_package(fmt REQUIRED)
 find_package(roq-api REQUIRED)
 find_package(roq-client REQUIRED)
+find_package(roq-io REQUIRED)
 find_package(roq-logging REQUIRED)
 find_package(hiredis REQUIRED)
 find_package(Libevent REQUIRED)
