--- a/src/roq/adapter/redis/CMakeLists.txt
+++ b/src/roq/adapter/redis/CMakeLists.txt
@@ -8,12 +8,14 @@ add_executable("${TARGET_NAME}" ${SOURCES})
 
 target_link_libraries(
   "${TARGET_NAME}"
-  PUBLIC roq-api::roq-api roq-logging::roq-logging
   PRIVATE "${TARGET_NAME}-flags"
           "${PROJECT_NAME}-event"
           "${PROJECT_NAME}-hiredis"
           roq-client::roq-client
-          absl::flags_parse
+          roq-logging::roq-logging
+          roq-api::roq-api
+          fmt::fmt
+          absl::flags
           ${HIREDIS_LIBRARIES}
           ${LIBEVENT_LIBRARIES}
           ${UUID_LIBRARIES}
