--- a/src/roq/adapter/redis/CMakeLists.txt
+++ b/src/roq/adapter/redis/CMakeLists.txt
@@ -17,6 +17,7 @@ target_link_libraries(
           fmt::fmt
           absl::flags
           ${HIREDIS_LIBRARIES}
+          ${LIBEVENT_LIBRARIES}
           ${UUID_LIBRARIES}
           ${RT_LIBRARIES})
 
