use abseil-cpp (instead of roq-oss-abseil-cpp)

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -21,7 +21,7 @@ requirements:
   host:
     - roq-client
     - roq-io
-    - roq-oss-abseil-cpp
+    - abseil-cpp
     - roq-oss-catch2
     - roq-oss-libevent
     - roq-oss-range-v3
