we can now set c++20 at top-level for cmake (issue was previously abseil-cpp on macos)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,10 @@ message("Using GIT_REPO_VERSION=${GIT_REPO_VERSION}")
 
 project(roq-redis-bridge VERSION ${GIT_REPO_VERSION})
 
+# c++
+
+set(CMAKE_CXX_STANDARD 20)
+
 # conda
 
 if(DEFINED ENV{CONDA_PREFIX} AND NOT DEFINED ENV{CONDA_BUILD})
