--- a/src/roq/bridge/redis/flags/CMakeLists.txt
+++ b/src/roq/bridge/redis/flags/CMakeLists.txt
@@ -2,6 +2,6 @@ set(TARGET_NAME "${PROJECT_NAME}-flags")
 
 set(SOURCES flags.cpp)
 
-add_library("${TARGET_NAME}" STATIC ${SOURCES})
+add_library("${TARGET_NAME}" OBJECT ${SOURCES})
 
 target_link_libraries("${TARGET_NAME}" absl::flags)
