--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -6,7 +6,7 @@ source:
   git_url: ..
 
 build:
-  skip: True  # [win or osx]
+  skip: True  # [win]
   number: {{ ROQ_BUILD_NUMBER if ROQ_BUILD_NUMBER is defined else GIT_DESCRIBE_NUMBER }}
   script_env:
     - ROQ_BUILD_NUMBER
