--- a/src/roq/bridge/redis/CMakeLists.txt
+++ b/src/roq/bridge/redis/CMakeLists.txt
@@ -14,6 +14,7 @@ target_link_libraries(
           roq-client::roq-client-flags
           roq-io::roq-io
           roq-logging::roq-logging
+          roq-logging::roq-logging-flags
           roq-api::roq-api
           fmt::fmt
           absl::flags
