--- a/src/roq/bridge/redis/CMakeLists.txt
+++ b/src/roq/bridge/redis/CMakeLists.txt
@@ -1,15 +1,15 @@
-set(TARGET_NAME "${PROJECT_NAME}")
+set(TARGET_NAME ${PROJECT_NAME})
 
 add_subdirectory(flags)
 
 set(SOURCES application.cpp config.cpp controller.cpp settings.cpp main.cpp)
 
-add_executable("${TARGET_NAME}" ${SOURCES})
+add_executable(${TARGET_NAME} ${SOURCES})
 
 target_link_libraries(
-  "${TARGET_NAME}"
-  PRIVATE "${TARGET_NAME}-flags"
-          "${PROJECT_NAME}-hiredis"
+  ${TARGET_NAME}
+  PRIVATE ${TARGET_NAME}-flags
+          ${PROJECT_NAME}-hiredis
           roq-client::roq-client
           roq-client::roq-client-flags
           roq-io::roq-io
@@ -24,10 +24,10 @@ target_link_libraries(
           ${UUID_LIBRARIES}
           ${RT_LIBRARIES})
 
-set_target_properties("${TARGET_NAME}" PROPERTIES LINK_FLAGS_RELEASE -s)
+set_target_properties(${TARGET_NAME} PROPERTIES LINK_FLAGS_RELEASE -s)
 
 target_compile_definitions(
-  "${TARGET_NAME}"
+  ${TARGET_NAME}
   PRIVATE ROQ_PACKAGE_NAME="${TARGET_NAME}" ROQ_BUILD_VERSION="${GIT_REPO_VERSION}"
           ROQ_GIT_DESCRIBE_HASH="${GIT_DESCRIBE_HASH}" ROQ_BUILD_NUMBER="${ROQ_BUILD_NUMBER}"
           ROQ_BUILD_TYPE="${ROQ_BUILD_TYPE}")
