--- a/src/roq/bridge/redis/flags/CMakeLists.txt
+++ b/src/roq/bridge/redis/flags/CMakeLists.txt
@@ -1,7 +1,7 @@
-set(TARGET_NAME "${PROJECT_NAME}-flags")
+set(TARGET_NAME ${PROJECT_NAME}-flags)
 
 set(SOURCES flags.cpp)
 
-add_library("${TARGET_NAME}" OBJECT ${SOURCES})
+add_library(${TARGET_NAME} OBJECT ${SOURCES})
 
-target_link_libraries("${TARGET_NAME}" absl::flags)
+target_link_libraries(${TARGET_NAME} absl::flags)
