--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,7 @@ set(TARGET_NAME ${PROJECT_NAME}-test)
 
 set(SOURCES dummy.cpp main.cpp)
 
-add_executable("${TARGET_NAME}" ${SOURCES})
+add_executable(${TARGET_NAME} ${SOURCES})
 
 target_link_libraries(${TARGET_NAME} fmt::fmt Catch2::Catch2)
 
