--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ cmake_minimum_required(VERSION 3.12)
 
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
+# config
+
+include(RoqConfig)
+
 # version (using git tag)
 
 include(GetGitRepoVersion)
@@ -13,24 +17,6 @@ message("Using GIT_REPO_VERSION=${GIT_REPO_VERSION}")
 # project
 
 project(roq-redis-bridge VERSION ${GIT_REPO_VERSION})
-
-# c++
-
-if(NOT DEFINED CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 20)
-endif()
-
-# conda
-
-if(DEFINED ENV{CONDA_PREFIX} AND NOT DEFINED ENV{CONDA_BUILD})
-  message("Setting CMAKE_INSTALL_PREFIX and CMAKE_FIND_ROOT_PATH")
-  set(CMAKE_INSTALL_PREFIX $ENV{CONDA_PREFIX})
-  set(CMAKE_FIND_ROOT_PATH $ENV{CONDA_PREFIX})
-endif()
-
-# rpath
-
-set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 # dependencies
 
