--- a/src/roq/bridge/redis/CMakeLists.txt
+++ b/src/roq/bridge/redis/CMakeLists.txt
@@ -17,6 +17,7 @@ target_link_libraries(
           roq-client::roq-client
           roq-client::roq-client-flags
           roq-io::roq-io
+          roq-market::roq-market
           roq-logging::roq-logging
           roq-logging::roq-logging-flags
           roq-flags::roq-flags
