--- a/src/roq/bridge/redis/CMakeLists.txt
+++ b/src/roq/bridge/redis/CMakeLists.txt
@@ -18,6 +18,7 @@ target_link_libraries(
           roq-client::roq-client-flags
           roq-io::roq-io
           roq-market::roq-market
+          roq-cache::roq-cache
           roq-logging::roq-logging
           roq-logging::roq-logging-flags
           roq-flags::roq-flags
