use unordered_dense instead of absl flat_hash_set/map

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -33,6 +33,7 @@ requirements:
     - roq-flags
     - roq-io
     - roq-market
+    - roq-oss-unordered_dense
 
 about:
   home: https://roq-trading.com
